--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "eth-todo-list",
+  "name": "eth-smartContact",
   "version": "1.0.0",
-  "description": "Blockchain Todo List Powered By Ethereum",
+  "description": "Blockchain Powered By Ethereum-Solidity",
   "main": "truffle-config.js",
   "directories": {
     "test": "test"
@@ -10,7 +10,7 @@
     "dev": "lite-server",
     "test": "echo \"Error: no test specified\" && sexit 1"
   },
-  "author": "gregory@dappuniversity.com",
+  "author": "viswanathan",
   "license": "ISC",
   "devDependencies": {
     "bootstrap": "4.1.3",
